--- a/pom.xml
+++ b/pom.xml
@@ -214,10 +214,10 @@
   </dependencyManagement>
 
   <scm>
-    <connection>scm:git:git@github.com:jleetutorial/maven-project.git</connection>
-    <developerConnection>scm:git:git@github.com:jleetutorial/maven-project.git</developerConnection>
+    <connection>scm:git:git@github.com:Dileep30k/Test.git</connection>
+    <developerConnection>scm:git:git@github.com:Dileep30k/Test.git</developerConnection>
     <tag>HEAD</tag>
-    <url>http://github.com/jleetutorial/maven-project</url>
+    <url>https://github.com/Dileep30k/Test</url>
   </scm>
 
   <prerequisites>
